// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleClientCmd concat definition file 1`] = `
"
/* eslint-disable */

namespace Test1NS {
  export interface App {
    S1: S1
  }
  interface S1 {}
}
export type Test1 = Test1NS.App;


namespace Test2NS {
  export interface App {
    S2: S2
  }
  interface S2 {}
}
export type Test2 = Test2NS.App;

export const Test1Meta = [];
export const Test2Meta = [];"
`;

exports[`handleClientCmd new definition file 1`] = `
"/* eslint-disable */


namespace Test1NS {
  export interface App {
    S1: S1
  }
  interface S1 {}
}
export type Test1 = Test1NS.App;


namespace Test2NS {
  export interface App {
    S2: S2
  }
  interface S2 {}
}
export type Test2 = Test2NS.App;

"
`;
